--- a/style.css
+++ b/style.css
@@ -59,9 +59,9 @@ footer p {
 }
 .italik {
     background-color: navy;
-    color:white;
+    color: white;
 }
 .sylka{
     background-color: #2adede;
-    border: 1px;
+    border: 1px solid #2adede;
 }
